--- a/product-page/style.css
+++ b/product-page/style.css
@@ -17,28 +17,36 @@ body {
   justify-content: space-between;
 }
 .logo {
-  margin-left: 0;
-  width: 15%;
+  width: 4em;
+  height: 1.5em;
+  margin-left: -14%;
+  margin-top: -5%;
   background-color: blueviolet;
 }
 .nav-list {
   list-style: none;
   display: flex;
-  margin-right: -5px;
+  margin-left: -25px;
+  width: 100%;
 }
 .link {
   text-decoration: none;
   color: blueviolet;
-  padding: 10px;
+  padding: 8px;
+  font-size: 0.9em;
 }
 .link:hover {
   color: chartreuse;
 }
 .nav-item {
-  margin-left: 5px;
+  margin-left: -5px;
+  width: 100%;
 }
 .total {
-  width: 15%;
+  font-size: 0.9em;
+  text-align: left;
+  margin-left: -5%;
+  width: 3em;
 }
 .products-container {
   display: flex;
@@ -63,4 +71,13 @@ body {
 }
 .cart-btn {
   margin: 10px;
+}
+.checkout-btn {
+  margin-right: -12%;
+  text-align: center;
+  width: min-content;
+}
+.popup {
+  width: 100%;
+  height: 100%;
 }
