--- a/product-page/style.css
+++ b/product-page/style.css
@@ -33,7 +33,7 @@ body {
   text-decoration: none;
   color: blueviolet;
   padding: 8px;
-  font-size: 0.9em;
+  font-size: 1em;
 }
 .link:hover {
   color: chartreuse;
@@ -48,7 +48,22 @@ body {
   margin-left: -5%;
   width: 3em;
 }
-.products-container {
+.main {
+  margin-top: 20%;
+}
+.checkout-btn {
+  margin-right: 15%;
+}
+.btn {
+  background-color: blueviolet;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 1em;
+}
+.btn:hover {
+  background-color: chartreuse;
+}
+.product-menu-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -80,4 +95,35 @@ body {
 .popup {
   width: 100%;
   height: 100%;
+}
+@media only screen and (min-width: 768px) {
+  .logo {
+    width: 10em;
+    height: 3em;
+    margin-left: -3em;
+    margin-top: -0.689em;
+  }
+  .checkout-btn {
+    margin-right: -1%;
+    width: 100px;
+    height: 50px;
+    font-size: 1em;
+  }
+  .link,
+  .total {
+    font-size: 1.3em;
+  }
+
+  .product-menu-container {
+    flex: 1;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: initial;
+    position: relative;
+    bottom: 150px;
+  }
+  .product-menu {
+    margin: 90px 20px;
+    padding: 20px;
+  }
 }
