--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ ul {
 }
 body {
   margin: 0 40px;
+  background-color: #3f325e;
+}
+* {
+  font-family: "Kanit", sans-serif;
 }
 .nav {
   display: flex;
@@ -17,9 +21,15 @@ body {
 }
 .logo {
   width: 100%;
-  height: 2.4em;
-  margin-left: -30%;
-  background-color: blueviolet;
+  height: 100%;
+  color: #9d8fe0;
+  margin-left: 0;
+}
+.logo-text {
+  font-size: 1.7em;
+}
+.logo-span {
+  color: chartreuse;
 }
 .nav-list {
   list-style: none;
@@ -28,7 +38,7 @@ body {
 }
 .link {
   text-decoration: none;
-  color: blueviolet;
+  color: #9d8fe0;
   padding: 10px;
 }
 .link:hover {
@@ -39,7 +49,9 @@ body {
 }
 .about-container {
   padding: 20px;
-  background-color: cyan;
+  background-color: #38a5b6;
+  /* border-top-left-radius: 5em; */
+  border-radius: 2em;
 }
 .about-image-container {
   display: flex;
@@ -60,13 +72,14 @@ body {
 }
 .menu {
   width: 275px;
-  border: 5px solid chartreuse;
+  border: 5px dotted blueviolet;
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 15px 0;
 }
+
 .menu-title {
   padding: 20px;
 }
@@ -77,12 +90,19 @@ body {
 }
 .menu-link {
   margin: 10px;
+  text-decoration: none;
+  color: blueviolet;
 }
 @media only screen and (min-width: 768px) {
+  .logo-text {
+    font-size: 2em;
+  }
+
   .about-container {
     display: flex;
     align-items: center;
     padding-bottom: 200px;
+    border-radius: 5em;
   }
 
   .about-image-container {
