--- a/product-page/style.css
+++ b/product-page/style.css
@@ -1,3 +1,5 @@
+/* resets 
+demonstrate how resets change and why it's good to do*/
 p,
 h1,
 h2,
@@ -5,43 +7,180 @@ ul {
   margin: 0;
   padding: 0;
 }
-
 body {
   margin: 0 40px;
-  overflow: hidden;
+  background-color: #3f325e;
 }
-
+* {
+  font-family: "Kanit", sans-serif;
+}
 .nav {
   display: flex;
-  width: 100%;
   align-items: center;
   justify-content: space-between;
 }
 .logo {
-  width: 4em;
-  height: 1.5em;
-  margin-left: -14%;
-  margin-top: -5%;
-  background-color: blueviolet;
+  width: 100%;
+  height: 100%;
+  color: #9d8fe0;
+  margin-left: 0;
+}
+.logo-text {
+  font-size: 1.7em;
+}
+.logo-span {
+  color: chartreuse;
 }
 .nav-list {
   list-style: none;
   display: flex;
-  margin-left: -25px;
-  width: 100%;
+  margin-right: -5px;
 }
 .link {
   text-decoration: none;
-  color: blueviolet;
-  padding: 8px;
-  font-size: 1em;
+  color: #9d8fe0;
+  padding: 10px;
 }
 .link:hover {
   color: chartreuse;
 }
 .nav-item {
-  margin-left: -5px;
+  margin-left: 5px;
+}
+
+.product-menu-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.product {
+  width: 275px;
+  border: 5px dotted blueviolet;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 15px 0;
+}
+
+.product-title {
+  padding: 20px;
+}
+.product-img {
+  width: 6em;
+  height: 6em;
+  flex: 1;
+}
+.cart-btn {
+  margin: 10px;
+  text-decoration: none;
+  color: blueviolet;
+}
+.btn {
+  background-color: blueviolet;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 1em;
+}
+.btn:hover {
+  background-color: chartreuse;
+}
+.checkout-btn {
+  margin-right: -12%;
+  text-align: center;
+  width: min-content;
+}
+.popup {
   width: 100%;
+  height: 100%;
+}
+.checkout-container {
+  display: none;
+}
+.checkout-popup-div {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  left: 50%;
+  transform: translate(-50%);
+  background-color: lightslategray;
+  z-index: 1;
+}
+.pop-up-p {
+  text-align: center;
+  color: black;
+  font-size: 2em;
+}
+.total {
+  font-size: 0.9em;
+  text-align: left;
+  margin-left: -5%;
+  width: 3em;
+}
+@media only screen and (min-width: 768px) {
+  .logo-text {
+    font-size: 2em;
+  }
+
+  .product-menu-container {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: initial;
+    position: relative;
+    bottom: 150px;
+  }
+  .product {
+    margin: 90px 20px;
+    padding: 20px;
+  }
+}
+
+/* =====
+=====
+===== */
+/* p,
+h1,
+h2,
+ul {
+  margin: 0;
+  padding: 0;
+}
+body {
+  margin: 0 40px;
+  background-color: #3f325e;
+}
+* {
+  font-family: "Kanit", sans-serif;
+}
+
+.logo {
+  width: 100%;
+  height: 100%;
+  color: #9d8fe0;
+  margin-left: 0;
+}
+.logo-text {
+  font-size: 1.7em;
+}
+.logo-span {
+  color: chartreuse;
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+  margin-right: -5px;
+}
+.link {
+  text-decoration: none;
+  color: #9d8fe0;
+  padding: 10px;
+}
+.link:hover {
+  color: chartreuse;
+}
+.nav-item {
+  margin-left: 5px;
 }
 .total {
   font-size: 0.9em;
@@ -52,9 +191,7 @@ body {
 .main {
   margin-top: 20%;
 }
-.checkout-btn {
-  margin-right: 15%;
-}
+
 .btn {
   background-color: blueviolet;
   width: fit-content;
@@ -144,4 +281,4 @@ body {
     margin: 90px 20px;
     padding: 20px;
   }
-}
+} */
