--- a/product-page/style.css
+++ b/product-page/style.css
@@ -49,7 +49,11 @@ body {
 }
 
 .product-menu-container {
+  position: absolute;
+  top: 15%;
   display: flex;
+  left: 50%;
+  transform: translate(-50%);
   flex-direction: column;
   align-items: center;
 }
@@ -74,7 +78,7 @@ body {
 .cart-btn {
   margin: 10px;
   text-decoration: none;
-  color: blueviolet;
+  color: chartreuse;
 }
 .btn {
   background-color: blueviolet;
@@ -84,6 +88,7 @@ body {
 }
 .btn:hover {
   background-color: chartreuse;
+  color: blueviolet;
 }
 .checkout-btn {
   margin-right: -12%;
@@ -111,11 +116,20 @@ body {
   color: black;
   font-size: 2em;
 }
+.total-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: absolute;
+  top: 7%;
+  right: 5%;
+}
 .total {
   font-size: 0.9em;
-  text-align: left;
-  margin-left: -5%;
+  text-align: center;
+  align-items: center;
   width: 3em;
+  color: chartreuse;
 }
 @media only screen and (min-width: 768px) {
   .logo-text {
