--- a/product-page/style.css
+++ b/product-page/style.css
@@ -66,7 +66,6 @@ body {
   align-items: center;
   margin: 15px 0;
 }
-
 .product-title {
   padding: 20px;
 }
@@ -135,164 +134,22 @@ body {
   .logo-text {
     font-size: 2em;
   }
-
-  .product-menu-container {
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: initial;
-    position: relative;
-    bottom: 150px;
+  .link {
+    font-size: 1.2em;
   }
-  .product {
-    margin: 90px 20px;
-    padding: 20px;
-  }
-}
-
-/* =====
-=====
-===== */
-/* p,
-h1,
-h2,
-ul {
-  margin: 0;
-  padding: 0;
-}
-body {
-  margin: 0 40px;
-  background-color: #3f325e;
-}
-* {
-  font-family: "Kanit", sans-serif;
-}
-
-.logo {
-  width: 100%;
-  height: 100%;
-  color: #9d8fe0;
-  margin-left: 0;
-}
-.logo-text {
-  font-size: 1.7em;
-}
-.logo-span {
-  color: chartreuse;
-}
-
-.nav-list {
-  list-style: none;
-  display: flex;
-  margin-right: -5px;
-}
-.link {
-  text-decoration: none;
-  color: #9d8fe0;
-  padding: 10px;
-}
-.link:hover {
-  color: chartreuse;
-}
-.nav-item {
-  margin-left: 5px;
-}
-.total {
-  font-size: 0.9em;
-  text-align: left;
-  margin-left: -5%;
-  width: 3em;
-}
-.main {
-  margin-top: 20%;
-}
-
-.btn {
-  background-color: blueviolet;
-  width: fit-content;
-  height: fit-content;
-  border-radius: 1em;
-}
-.btn:hover {
-  background-color: chartreuse;
-}
-.product-menu-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.product-menu {
-  width: 275px;
-  border: 5px solid chartreuse;
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 20px 0;
-}
-.product-title {
-  padding: 20px;
-}
-.product-img {
-  width: 100%;
-  flex: 1;
-}
-.cart-btn {
-  margin: 10px;
-}
-.checkout-btn {
-  margin-right: -12%;
-  text-align: center;
-  width: min-content;
-}
-.popup {
-  width: 100%;
-  height: 100%;
-}
-.checkout-container {
-  display: none;
-}
-.checkout-popup-div {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  left: 50%;
-  transform: translate(-50%);
-  background-color: lightslategray;
-  z-index: 1;
-}
-.pop-up-p {
-  text-align: center;
-  color: black;
-  font-size: 2em;
-}
-@media only screen and (min-width: 768px) {
-  .logo {
-    width: 10em;
-    height: 3em;
-    margin-left: -3em;
-    margin-top: -0.689em;
-  }
-  .checkout-btn {
-    margin-right: -1%;
-    width: 100px;
-    height: 50px;
+  .total-div {
     font-size: 1em;
   }
-  .link,
-  .total {
-    font-size: 1.3em;
-  }
-
   .product-menu-container {
-    flex: 1;
     flex-direction: row;
+
+    width: 96%;
     justify-content: space-evenly;
     align-items: initial;
-    position: relative;
-    bottom: 150px;
   }
-  .product-menu {
+  .product {
+    width: 100%;
     margin: 90px 20px;
     padding: 20px;
   }
-} */
+}
