--- a/product-page/style.css
+++ b/product-page/style.css
@@ -52,6 +52,7 @@ body {
   position: absolute;
   top: 15%;
   display: flex;
+
   left: 50%;
   transform: translate(-50%);
   flex-direction: column;
@@ -102,9 +103,9 @@ body {
   display: none;
 }
 .checkout-popup-div {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
+  position: fixed;
+  width: 100%;
+  height: 100%;
   left: 50%;
   transform: translate(-50%);
   background-color: lightslategray;
@@ -156,16 +157,24 @@ body {
   .total-div {
     font-size: 1em;
   }
+  .product-section {
+    width: 100%;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
   .product-menu-container {
     flex-direction: row;
-
-    width: 96%;
-    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 80%;
     align-items: initial;
   }
+  .product-img {
+    width: 9em;
+    height: 9em;
+  }
   .product {
-    width: 100%;
-    margin: 90px 20px;
+    margin: 30px 20px;
     padding: 20px;
   }
 }
