--- a/product-page/style.css
+++ b/product-page/style.css
@@ -108,7 +108,7 @@ body {
   height: 100%;
   left: 50%;
   transform: translate(-50%);
-  background-color: lightslategray;
+  background-color: #3f325e;
   z-index: 1;
 }
 .pop-up-text {
